[package]
name = "SQLRite"
version = "0.1.0"
authors = ["Joao Henrique Machado Silva <joaoh82@gmail.com>"]
edition = "2018"
description = "Light version of SQLite developed with Rust"
repository = "https://github.com/joaoh82/rust_sqlite"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
